# goban

./: pyproject.toml
src/goengine/: board.py  cli.py  game.py  move.py
