[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goban"
version = "0.1.0"
description = "Go engine and server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "birdrat"}
]

# No `packages` key here – that's what caused the error.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
